--- a/src/Hafslund.Akka.Persistence.Bigtable/Hafslund.Akka.Persistence.Bigtable.csproj
+++ b/src/Hafslund.Akka.Persistence.Bigtable/Hafslund.Akka.Persistence.Bigtable.csproj
@@ -1,8 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="reference.conf" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Akka" Version="1.3.8" />
