--- a/src/Hafslund.Akka.Persistence.Bigtable/Hafslund.Akka.Persistence.Bigtable.csproj
+++ b/src/Hafslund.Akka.Persistence.Bigtable/Hafslund.Akka.Persistence.Bigtable.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="reference.conf" />
+    <EmbeddedResource Include="reference.conf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
