Move sharding related config out from reference.conf  to separate reference-sharding.conf. Sharding related config may never be used, and in those cases they would just pollute the config. Also, we avoid issue with having both sets of config loaded twice, once for each extension.

--- a/src/Hafslund.Akka.Persistence.Bigtable/Hafslund.Akka.Persistence.Bigtable.csproj
+++ b/src/Hafslund.Akka.Persistence.Bigtable/Hafslund.Akka.Persistence.Bigtable.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="reference-sharding.conf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="reference-sharding.conf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="reference.conf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
