MDM-833: Attempt to fix flaky tests by disabling parallelism in xunit.

--- a/test/Hafslund.Akka.Persistence.Bigtable.IntegrationTests/Hafslund.Akka.Persistence.Bigtable.IntegrationTests.csproj
+++ b/test/Hafslund.Akka.Persistence.Bigtable.IntegrationTests/Hafslund.Akka.Persistence.Bigtable.IntegrationTests.csproj
@@ -21,4 +21,10 @@
     <ProjectReference Include="..\..\src\Hafslund.Akka.Persistence.Bigtable\Hafslund.Akka.Persistence.Bigtable.csproj" />
   </ItemGroup>
 
+<ItemGroup>
+  <Content Include="xunit.runner.json">
+    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+  </Content>
+</ItemGroup>
+
 </Project>
