MDM-861: Add bigtable row filters for performance. Add perf tests for recovery.

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,8 @@ dlldata.c
 # Benchmark Results
 BenchmarkDotNet.Artifacts/
 
+**/PerfResults/
+
 # .NET Core
 project.lock.json
 project.fragment.lock.json
