--- a/test/Hafslund.Akka.Persistence.Bigtable.IntegrationTests/Hafslund.Akka.Persistence.Bigtable.IntegrationTests.csproj
+++ b/test/Hafslund.Akka.Persistence.Bigtable.IntegrationTests/Hafslund.Akka.Persistence.Bigtable.IntegrationTests.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.json" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Environmentvariables" Version="2.1.1" />
+    <PackageReference Include="Akka.Serialization.MessagePack" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
