MDM-894: Add perf tests.

--- a/test/Hafslund.Akka.Persistence.Bigtable.PerformanceTests/Dockerfile
+++ b/test/Hafslund.Akka.Persistence.Bigtable.PerformanceTests/Dockerfile
@@ -50,6 +50,7 @@ RUN dotnet build test/Hafslund.Akka.Persistence.Bigtable.PerformanceTests
 # Run tests
 ENV SA_KEY=""
 ENV PERFORMANCE_TEST_JOURNAL_TABLE=""
+ENV PERFORMANCE_TEST_SNAPSHOT_STORE_TABLE=""
 ENV GOOGLE_APPLICATION_CREDENTIALS=/app/_key.json
 ENTRYPOINT echo $SA_KEY | base64 -d > _key.json \
     && gcloud auth activate-service-account --key-file=_key.json \
