--- a/test/Hafslund.Akka.Persistence.Bigtable.IntegrationTests/Hafslund.Akka.Persistence.Bigtable.IntegrationTests.csproj
+++ b/test/Hafslund.Akka.Persistence.Bigtable.IntegrationTests/Hafslund.Akka.Persistence.Bigtable.IntegrationTests.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Akka.Persistence.TCK" Version="1.3.11" />
     <PackageReference Include="Akka.TestKit.Xunit2" Version="1.3.11" />
+    <PackageReference Include="Google.Cloud.Bigtable.Admin.V2" Version="0.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="Moq" Version="4.10.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
