--- a/test/Hafslund.Akka.Persistence.Bigtable.PerformanceTests/Hafslund.Akka.Persistence.Bigtable.PerformanceTests.csproj
+++ b/test/Hafslund.Akka.Persistence.Bigtable.PerformanceTests/Hafslund.Akka.Persistence.Bigtable.PerformanceTests.csproj
@@ -7,13 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Cloud.Bigtable.Admin.V2" Version="1.0.0-beta05" />
+    <PackageReference Include="Google.Cloud.Bigtable.Common.V2" Version="1.0.0-beta05" />
+    <PackageReference Include="Google.Cloud.Bigtable.V2" Version="1.0.0-beta05" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
     <PackageReference Include="NBench" Version="1.2.2" />
     <PackageReference Include="Akka.Serialization.MessagePack" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.json" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Environmentvariables" Version="2.1.1" />
     <DotNetCliToolReference Include="dotnet-nbench" Version="1.2.2" />
   </ItemGroup>
 
